feat: 新增风格库，提供 9 种预设图像风格
## 核心功能

### 🎨 风格库
新增 `config.example/style-library.md`，包含 9 种预设风格：
- 水彩风格 (watercolor) - 柔和温馨，适合儿童插画
- 扁平化设计 (flat-design) - 现代简洁，适合商业演示
- 3D 渲染 (3d-render) - 立体真实，适合产品展示
- 油画风格 (oil-painting) - 艺术经典，适合风景肖像
- 赛博朋克 (cyberpunk) - 科幻未来，适合游戏场景
- 像素艺术 (pixel-art) - 复古怀旧，适合复古游戏
- 手绘插画 (hand-drawn) - 温暖个性，适合创意表达
- 照片写实 (photorealistic) - 高度真实，适合产品摄影
- 抽象艺术 (abstract) - 情感表达，适合装饰画

### 📋 风格库特性
- 每种风格包含详细的特征描述
- 提供适用场景说明
- 包含提示词关键词
- 提供自动选择规则（Agent 可根据内容信号推荐风格）

### 📚 文档更新
- 更新 README.md：新增风格库章节
- 更新 SKILL.md：新增风格库说明
- 更新提示词模板：增加风格库引用说明和使用示例

### 🔧 提示词模板优化
- 重构提示词结构：通用约束 + 具体内容描述
- 新增完整示例：基础文生图、使用风格库
- 优化编写技巧和常见错误说明

## 文件变更
- 新增 config.example/style-library.md
- 更新 README.md（新增风格库章节）
- 更新 SKILL.md（新增风格库说明）
- 更新 config.example/prompt-templates/提示词模板.md
- 更新 task.md（任务记录）

--- a/config.example/prompt-templates/提示词模板.md
+++ b/config.example/prompt-templates/提示词模板.md
@@ -4,57 +4,117 @@
 
 此文件用作图像生成的提示词模板。复制到项目目录后，可以按需要修改。
 
-## 提示词示例
+## 模板结构
 
-### 示例 1：动物场景
+提示词由两部分组成：**通用约束条件** + **具体内容描述**
 
+### 通用约束条件（可复用）
+
+```markdown
+## 通用约束
+
+- 分辨率: 4K, high resolution
+- 质量: high quality, detailed, professional
+- 构图: well-composed, balanced
+- 光照: natural lighting, soft shadows
 ```
+
+### 具体内容描述
+
+```markdown
 ## 提示词
 
-一只可爱的柴犬在樱花树下睡觉，水彩风格，柔和的粉色调，春天的氛围，毛发蓬松，细节丰富，4K 分辨率。
+[主体描述] + [动作/状态] + [场景环境] + [色彩氛围] + [细节补充]
+
+## 风格（可选）
+
+参考风格库中的 [风格名称] 风格
 ```
 
-### 示例 2：风景场景
+---
 
-```
+## 完整示例
+
+### 示例 1：基础文生图
+
+```markdown
+## 通用约束
+
+- 分辨率: 4K, high resolution
+- 质量: high quality, detailed
+
 ## 提示词
 
-一片宁静的湖泊，湖水清澈见底，周围环绕着高大的松树，远处有雪山，日落时分，金色的阳光洒在雪山上，油画风格。
+一只可爱的柴犬在樱花树下睡觉，毛发蓬松，柔和的粉色调，春天的氛围
+
+## 风格
+
+参考风格库中的水彩风格
 ```
 
-### 示例 3：人物场景
+### 示例 2：使用风格库
 
-```
+```markdown
+## 通用约束
+
+- 分辨率: 4K, high resolution
+- 质量: high quality, detailed
+
 ## 提示词
 
-一个穿着古风服饰的少女，站在竹林中，手持一把油纸伞，微风轻轻吹动头发，水墨风格，淡雅的色调，意境悠远。
+一个现代化的数据中心，服务器机架整齐排列，蓝色和白色的配色
+
+## 风格
+
+参考风格库中的扁平化设计
 ```
+
+---
 
 ## 提示词格式规范
 
 ### 结构建议
 
-1. 使用 `## 提示词` 标题开始
-2. 主体描述
-3. 风格说明
-4. 颜色和氛围
-5. 细节描述
-6. 技术参数
+1. **通用约束**：分辨率、质量、基础要求
+2. **提示词**：主体 → 动作 → 场景 → 色彩 → 细节
+3. **风格**：引用风格库中的预设风格（推荐）
 
 ### 编写技巧
 
-- **详细描述**：场景、主体、风格、颜色、光照等
+- **分离通用和具体**：通用约束可复用，具体内容按需修改
+- **详细描述**：场景、主体、颜色、光照等
 - **避免歧义**：不要使用模糊词汇
 - **具体词汇**：使用具体的名词和形容词
-- **顺序**：主体 → 动作 → 场景 → 风格 → 细节
+- **引用风格库**：使用预设风格保证一致性（推荐）
 
 ### 常见错误
 
 避免使用以下类型的提示词：
 
-1. **太过模糊**："一幅漂亮的画"
-2. **包含矛盾元素**："一只透明的柴犬"
+1. **太过模糊**：\"一幅漂亮的画\"
+2. **包含矛盾元素**：\"一只透明的柴犬\"
 3. **违规内容**：包含暴力、色情等禁止内容
+4. **缺少风格约束**：没有指定风格导致结果不可控
+
+---
+
+## 风格库
+
+查看 `config.example/style-library.md` 了解所有预设风格：
+
+- 水彩风格 (watercolor) - 柔和温馨
+- 扁平化设计 (flat-design) - 现代简洁
+- 3D 渲染 (3d-render) - 立体真实
+- 油画风格 (oil-painting) - 艺术经典
+- 赛博朋克 (cyberpunk) - 科幻未来
+- 像素艺术 (pixel-art) - 复古怀旧
+- 手绘插画 (hand-drawn) - 温暖个性
+- 照片写实 (photorealistic) - 高度真实
+- 抽象艺术 (abstract) - 情感表达
+
+每种风格包含详细的特征描述、适用场景和提示词关键词。
+
+---
 
 ## 提示词生成资源
 
