refactor: 大幅简化项目结构和文档
## 核心改动

### 📚 文档简化
- 删除 docs/ 目录（3 个详细文档，共 666 行）
  - 01_提示词设计.md
  - 02_垫图准备.md
  - 03_API使用.md
- 大幅简化 README.md（从 346 行减少到 80 行）
- 大幅简化 SKILL.md（从 409 行减少到 100 行）
- 简化提示词模板（从 130 行减少到 64 行）

### 🔧 功能简化
- 删除 scripts/generate-prompt.js（151 行）
- 移除复杂的 AI 安装说明
- 移除冗余的使用场景说明
- 保留核心功能：风格分析、图像生成、风格库

### 🎯 简化原则
- 只保留必要的核心功能
- 文档聚焦于快速开始和核心用法
- 移除过度设计的辅助工具
- 用户直接编辑提示词模板，而非使用交互式工具

### 📊 代码统计
- 删除：1446 行
- 新增：90 行
- 净减少：1356 行（简化 93%）

## 保留的核心功能
- ✅ 风格分析（analyze-image.js）
- ✅ 图像生成（generate-image.js）
- ✅ 风格库（9 种预设风格）
- ✅ 逐张确认机制
- ✅ 智能跳过已生成图像

## 文件变更
- 更新 README.md（大幅简化）
- 更新 SKILL.md（大幅简化）
- 更新 config.example/prompt-templates/提示词模板.md（简化）
- 删除 docs/01_提示词设计.md
- 删除 docs/02_垫图准备.md
- 删除 docs/03_API使用.md
- 删除 scripts/generate-prompt.js
- 更新 task.md

--- a/config.example/prompt-templates/提示词模板.md
+++ b/config.example/prompt-templates/提示词模板.md
@@ -1,9 +1,5 @@
 # 提示词模板
 
-## 用途
-
-此文件用作图像生成的提示词模板。复制到项目目录后，可以按需要修改。
-
 ## 模板结构
 
 提示词由两部分组成：**通用约束条件** + **具体内容描述**
@@ -35,8 +31,6 @@
 
 ## 完整示例
 
-### 示例 1：基础文生图
-
 ```markdown
 ## 通用约束
 
@@ -52,49 +46,20 @@
 参考风格库中的水彩风格
 ```
 
-### 示例 2：使用风格库
-
-```markdown
-## 通用约束
-
-- 分辨率: 4K, high resolution
-- 质量: high quality, detailed
-
-## 提示词
-
-一个现代化的数据中心，服务器机架整齐排列，蓝色和白色的配色
-
-## 风格
-
-参考风格库中的扁平化设计
-```
-
 ---
 
-## 提示词格式规范
-
-### 结构建议
-
-1. **通用约束**：分辨率、质量、基础要求
-2. **提示词**：主体 → 动作 → 场景 → 色彩 → 细节
-3. **风格**：引用风格库中的预设风格（推荐）
-
-### 编写技巧
+## 编写技巧
 
 - **分离通用和具体**：通用约束可复用，具体内容按需修改
 - **详细描述**：场景、主体、颜色、光照等
-- **避免歧义**：不要使用模糊词汇
-- **具体词汇**：使用具体的名词和形容词
-- **引用风格库**：使用预设风格保证一致性（推荐）
+- **避免歧义**：使用具体的名词和形容词
+- **引用风格库**：使用预设风格保证一致性
 
-### 常见错误
+## 常见错误
 
-避免使用以下类型的提示词：
-
-1. **太过模糊**：\"一幅漂亮的画\"
-2. **包含矛盾元素**：\"一只透明的柴犬\"
-3. **违规内容**：包含暴力、色情等禁止内容
-4. **缺少风格约束**：没有指定风格导致结果不可控
+1. 太过模糊：\"一幅漂亮的画\"
+2. 包含矛盾元素：\"一只透明的柴犬\"
+3. 缺少风格约束：没有指定风格导致结果不可控
 
 ---
 
@@ -111,20 +76,3 @@
 - 手绘插画 (hand-drawn) - 温暖个性
 - 照片写实 (photorealistic) - 高度真实
 - 抽象艺术 (abstract) - 情感表达
-
-每种风格包含详细的特征描述、适用场景和提示词关键词。
-
----
-
-## 提示词生成资源
-
-### 在线工具
-
-- https://promptomania.com/
-- https://www.promptbuilder.pro/
-- https://openart.ai/prompts
-
-### 提示词库
-
-- https://promptbase.com/
-- https://lexica.art/
