feat: 添加 sm.ms 图床支持并优化上传逻辑
- 优先使用 sm.ms 图床（永久存储，支持删除）
- sm.ms 失败时自动降级到 freeimage.host
- 重构上传逻辑为函数式，便于维护
- 更新图床上传文档，推荐 sm.ms 为首选

--- a/pw-image-generation/references/图床上传.md
+++ b/pw-image-generation/references/图床上传.md
@@ -4,7 +4,21 @@
 
 ## 推荐图床
 
-### freeimage.host（推荐，永久存储）
+### sm.ms（推荐，永久存储，支持删除）
+
+```bash
+curl -s -X POST -F "smfile=@本地图片路径" https://sm.ms/api/v2/upload
+```
+
+返回 JSON，提取 `data.url` 字段获取直链，如 `https://s2.loli.net/xxxxx.png`
+
+**优点**:
+- 永久存储
+- 支持删除（通过 delete hash）
+- 稳定性高
+- 无需注册即可使用
+
+### freeimage.host（备选，永久存储）
 
 ```bash
 curl -s -X POST -F "source=@本地图片路径" "https://freeimage.host/api/1/upload?key=6d207e02198a847aa98d0a2a901485a5"
@@ -30,13 +44,13 @@ curl -s -F "reqtype=fileupload" -F "fileToUpload=@本地图片路径" https://ca
 
 ## 图床对比
 
-| 图床 | 有效期 | 稳定性 | 备注 |
-|-----|-------|-------|------|
-| freeimage.host | 永久 | 高 | 推荐首选 |
-| litterbox | 1小时 | 中 | 部分网络不可用 |
-| catbox | 永久 | 中 | 部分网络不可用 |
-| sm.ms | 永久 | 高 | 需要登录 |
-| imgbb | 永久 | 高 | 需要注册获取 API Key |
+| 图床 | 有效期 | 稳定性 | 删除支持 | 备注 |
+|-----|-------|-------|---------|------|
+| sm.ms | 永久 | 高 | ✅ 支持 | **推荐首选** |
+| freeimage.host | 永久 | 高 | ✅ 支持 | 备选 |
+| litterbox | 1小时 | 中 | ❌ 自动删除 | 部分网络不可用 |
+| catbox | 永久 | 中 | ⚠️ 需注册 | 部分网络不可用 |
+| imgbb | 永久 | 高 | ⚠️ 需注册 | 需要 API Key |
 
 ## 使用方式
 
@@ -50,7 +64,8 @@ node ~/.claude/skills/pw-image-generation/scripts/upload-image.js ./template/图
 ```
 
 **功能**:
-- 自动上传到 freeimage.host
+- 优先上传到 sm.ms
+- 如果失败，自动尝试 freeimage.host
 - 返回图片 URL
 - 自动保存删除链接到 `.upload-history.json`
 
