feat: 添加标准化风格提取和约束系统
- 在 02_PPT模板分析方法.md 中添加完整的风格提取规范章节
- 在 05_提示词模板示例.md 中添加标准化的提示词结构
- 创建 references/styles/ 风格库目录
- 添加 4 个预定义风格模板: corporate, minimal, technical, creative
- 更新 SKILL.md 工作流程，加入风格提取步骤
- 更新参考文档列表

改进效果:
- 风格提取和应用流程标准化
- 颜色、字体等视觉元素精确定义
- 通过明确约束规则提升生成质量

--- a/pw-aippt/references/05_提示词模板示例.md
+++ b/pw-aippt/references/05_提示词模板示例.md
@@ -32,13 +32,71 @@
 
 ---
 
+## 提示词标准结构
+
+所有提示词必须遵循以下标准结构，确保风格约束的完整性和一致性。
+
+### 基本结构
+
+```
+{垫图URL} 参考这张PPT模板，生成新页面。
+
+【风格约束】(严格遵守)
+## 设计美学
+{从模板分析中提取的设计美学描述}
+
+## 背景系统
+- 颜色: {精确 Hex 值}
+- 纹理: {纹理描述}
+- 渐变: {渐变信息}
+
+## 字体系统
+### 标题字体
+- 字体: {字体名称}
+- 粗细: {粗细}
+- 大小: {大小}
+- 颜色: {Hex 值}
+
+### 正文字体
+- 字体: {字体名称}
+- 粗细: {粗细}
+- 大小: {大小}
+- 颜色: {Hex 值}
+
+## 颜色系统
+{从模板分析中提取的颜色表格}
+
+## 视觉元素
+{装饰元素列表}
+
+## 风格规则
+### 应该保持
+- {保持的特征列表}
+
+### 禁止改变
+- 不添加幻灯片编号、页脚或 Logo (除非模板原有)
+- {其他禁止项}
+
+【不可改区域】(严格保持原样)
+- {具体的不可改元素}
+
+【可改区域】
+- {要替换的内容}
+
+【生成指令】
+absolutely no watermark, clean output only
+```
+
+---
+
 ## 示例：内容页提示词
 
 ### 模板分析
 
 假设我们有一个模板图片 `template/图.003.png`，观察后提取到以下数据：
 
-**背景**: 纯白色
+**设计美学**: 现代商务风格，强调专业性和清晰度
+**背景**: 纯白色 (#FFFFFF)
 **配色**: 红色标题 #E74C3C，黑色正文 #2C3E50
 **布局**: 左右分栏，左侧 40%，右侧 60%
 **装饰元素**:
@@ -48,9 +106,9 @@
 - 左上角: 公司 Logo（红色心形图标）
 
 **字体**:
-- 标题: 48pt 粗体黑体，居中
-- 正文: 24pt 常规宋体，左对齐
-- 小标题: 32pt 粗体黑体
+- 标题: 48pt 粗体黑体，居中，深灰色 (#334155)
+- 正文: 24pt 常规宋体，左对齐，中灰色 (#64748B)
+- 小标题: 32pt 粗体黑体，深灰色 (#334155)
 
 **留白**: 上下左右各 5% 边距
 
@@ -72,23 +130,68 @@
 
 生成新的内容页。
 
+【风格约束】(严格遵守)
+## 设计美学
+现代商务风格，强调专业性和清晰度。信息层级清晰，视觉简洁大方。
+
+## 背景系统
+- 颜色: 纯白色 (#FFFFFF)
+- 纹理: 无
+- 渐变: 无
+
+## 字体系统
+### 标题字体
+- 字体: 黑体 (Heiti)
+- 粗细: Bold (700)
+- 大小: 48pt
+- 颜色: 深灰 (#334155)
+
+### 正文字体
+- 字体: 宋体 (SimSun)
+- 粗细: Regular (400)
+- 大小: 24pt
+- 颜色: 中灰 (#64748B)
+
+### 小标题字体
+- 字体: 黑体 (Heiti)
+- 粗细: Bold (700)
+- 大小: 32pt
+- 颜色: 深灰 (#334155)
+
+## 颜色系统
+| 角色 | 颜色名 | Hex 值 | 用途 |
+|------|--------|--------|------|
+| 背景 | 纯白 | #FFFFFF | 主背景 |
+| 主文本 | 深灰 | #334155 | 标题、小标题 |
+| 次要文本 | 中灰 | #64748B | 正文 |
+| 强调色 | 红色 | #E74C3C | 装饰元素、重点标注 |
+| 页码/作者 | 浅灰 | #999999 | 页码、作者信息 |
+
+## 视觉元素
+- 左上角: 红色圆形装饰图标
+- 底部: 红色横幅装饰条
+- 右下角: 页码区域
+- 左上角: 公司 Logo (红色心形图标)
+
+## 风格规则
+### 应该保持
+- 保持一致的留白比例 (上下左右各 5%)
+- 使用网格对齐，确保元素整齐排列
+- 保持统一的字体系统
+- 标题居中，正文左对齐
+
+### 禁止改变
+- 不添加幻灯片编号 (除非模板原有)
+- 不添加页脚文字 (除非模板原有)
+- 不使用与风格不符的装饰元素
+- 不改变背景颜色
+- 不使用颜色系统外的颜色
+
 【不可改区域】(严格保持原样)
 - 整体设计风格: 参考模板图片的装饰元素、边框、色块等设计细节
-- 背景: 纯白色（#FFFFFF）
-- 配色方案: 红色标题（#E74C3C），黑色正文（#2C3E50）
 - 页面布局结构: 左右分栏布局，左侧 40%，右侧 60%
-- 装饰元素:
-  - 左上角: 红色圆形装饰图标
-  - 底部: 红色横幅装饰条
-  - 右下角: 页码区域
-- LOGO: 左上角公司 Logo（红色心形图标）
-
-【风格约束】
-- 字体大小: 标题 48pt 粗体，正文 24pt 常规，小标题 32pt 粗体
-- 字体样式: 标题使用黑体，正文使用宋体
-- 留白: 上下左右各 5% 边距
-- 对齐方式: 标题居中，正文左对齐
-- 作者信息: 右下角 "@牟勇"，18pt 字体，浅灰色（#999999）
+- 装饰元素: 左上角红色圆形装饰图标、底部红色横幅装饰条、右下角页码区域
+- LOGO: 左上角公司 Logo (红色心形图标)
 
 【可改区域】
 - 页面标题改为: "年休假天数标准"
@@ -111,11 +214,7 @@
   3. 当年度未休完的年休假不结转下年
   4. 单位应当保证职工享受年休假
 
-【信息层级】
-1. 页面标题最突出（48pt 粗体）
-2. 左侧工作年限数据是核心信息（32pt 小标题 + 24pt 正文）
-3. 右侧说明文字次要（24pt 正文）
-4. 底部注释最小（18pt 灰色）
+- 作者信息: 右下角 "@牟勇"，18pt 字体，浅灰色 (#999999)
 
 【生成指令】
 保持专业的法规文件风格，内容清晰易读，数据准确。
